# py-home-gallery

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  content.json  content.json.example  docker-compose.yml  gallery.py  nginx.conf  pyproject.toml  requirements.txt  run.ps1  run.py  test_performance.py
docs/: API.md  ARCHITECTURE.md  CACHE_AND_WORKERS.md  CONFIGURATION.md  CONTENT_CUSTOMIZATION.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_HANDLING.md  FEATURES.md  LOGGING.md  README.md  SECURITY.md
py_home_gallery/: __init__.py  __main__.py  app.py  config.py  constants.py
py_home_gallery/media/: __init__.py  dimension_helper.py  dimensions.py  scanner.py  thumbnails.py  utils.py
py_home_gallery/routes/: __init__.py  browse.py  gallery.py  infinite.py  media.py  metadata.py
py_home_gallery/utils/: __init__.py  cache.py  content.py  ffmpeg.py  logger.py  metadata.py  pagination.py  security.py
py_home_gallery/workers/: __init__.py  preload.py  thumbnail_worker.py
scripts/: optimize_samplegallery.ps1  optimize_samplegallery_aggressive.ps1
static/: gallery.js  metadata.js  style.css  theme.js
templates/: browse.html  gallery.html  index.html  infinite.html  random.html
